--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,15 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  awesome_icons: ^1.1.0
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  flutter_carousel_widget: ^2.1.2
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
