--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_carousel_widget: ^2.1.2
+  google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.2.1
 
